--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h3>Noticias</h3>
+<app-navbar [titulo]="'Consultar Noticias'"> </app-navbar>
+<div class="container">
+  <app-formulario
+    (parametrosSeleccionados)="buscarNoticias($event)"
+  ></app-formulario>
+  <app-spinner *ngIf="loading"></app-spinner>
+  <app-listado-noticias [listNoticias]="listNoticias"></app-listado-noticias>
+</div>
