--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,1 +1,39 @@
-<p>formulario works!</p>
+<div class="list-group mt-5">
+  <h2 class="heading">Filtro de noticas por pais y categoria</h2>
+  <div class="row mt-3">
+    <div class="col-lg-8 offset-lg-2">
+      <form (ngSubmit)="buscarNoticia()">
+        <div class="form-group">
+          <select
+            name="categoria"
+            [(ngModel)]="categoriaSelecionada"
+            class="form-control form-control-lg"
+          >
+            <option
+              [value]="categoria.value"
+              *ngFor="let categoria of categoria"
+            >
+              {{ categoria.nombre }}
+            </option>
+          </select>
+        </div>
+        <br />
+        <div class="form-group">
+          <select
+            name="pais"
+            [(ngModel)]="paisSeleccionado"
+            class="form-control form-control-lg"
+          >
+            <option [value]="pais.value" *ngFor="let pais of paises">
+              {{ pais.nombre }}
+            </option>
+          </select>
+        </div>
+        <br />
+        <button type="submit" class="btn btn-primary d-block mx-auto">
+          Buscar
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
